tls_termination_example/ingress/cafe-ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    nginx.org/server-snippets: |
      location / {
        return 302 /coffee;
      }
spec:
  tls:
  - hosts:
    - cafe.example.com
    secretName: cafe-secret
  ingressClassName: nginx
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 8081
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 8082
